# adapter-discord

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: codecov.yml  pyright.yml  release.yml
nonebot/adapters/discord/: __init__.py  adapter.py  bot.py  config.py  event.py  exception.py  message.py  payload.py  serialization.py  typing.py  utils.py
nonebot/adapters/discord/api/: __init__.py  client.pyi  handle.py  model.py  request.py  types.py  utils.py  validation.py
nonebot/adapters/discord/api/models/: __init__.py  application.py  application_commands.py  audit_log.py  auto_moderation.py  channels.py  embeds.py  emoji.py  gateway_event_fields.py  gateway_events.py  gateway_payloads.py  guild_members.py  guild_scheduled_events.py  guild_templates.py  guild_welcome.py  guilds.py  integrations.py  interactions.py  invites.py  lobby.py  message_components.py  messages.py  monetization.py  oauth2.py  permissions.py  polls.py  soundboard.py  stage_instance.py  stickers.py  teams.py  user.py  voice.py  webhooks.py
nonebot/adapters/discord/api/models/common/: __init__.py  application.py  audit_log.py  auto_moderation.py  channels.py  embeds.py  emoji.py  guild_members.py  guild_scheduled_events.py  guild_templates.py  guild_welcome.py  guilds.py  integrations.py  interactions.py  invites.py  lobby.py  messages.py  monetization.py  oauth2.py  permissions.py  polls.py  snowflake.py  soundboard.py  stage_instance.py  stickers.py  teams.py  user.py  voice.py  webhooks.py
nonebot/adapters/discord/api/models/gateway/: __init__.py  auto_moderation_events.py  channel_events.py  frame.py  gateway_event_fields.py  gateway_events.py  gateway_payloads.py  guild_events.py  integration_events.py  invite_events.py  monetization_events.py
nonebot/adapters/discord/api/models/gateway/event/: __init__.py  auto_moderation.py  channels.py  guilds.py  integrations.py  interactions.py  invites.py  messages.py  monetization.py
nonebot/adapters/discord/api/models/http/: __init__.py  application.py  audit_log.py  auto_moderation.py  channels.py  emoji.py  gateway.py  guild_members.py  guild_scheduled_events.py  guild_templates.py  guild_welcome.py  guilds.py  integrations.py  invites.py  lobby.py  monetization.py  polls.py  soundboard.py  stage_instance.py  stickers.py  voice.py  webhooks.py
nonebot/adapters/discord/api/models/interactions/: __init__.py  application_commands.py  interactions.py  message_components.py
nonebot/adapters/discord/api/models/request/: __init__.py  application.py  auto_moderation.py  channels.py  emoji.py  guild_members.py  guild_scheduled_events.py  guild_templates.py  guild_welcome.py  guilds.py  interactions.py  lobby.py  messages.py  permissions.py  polls.py  soundboard.py  stickers.py  user.py  voice.py  webhooks.py
nonebot/adapters/discord/api/models/response/: __init__.py  channels.py  emoji.py  gateway.py  oauth2.py  soundboard.py  stickers.py
nonebot/adapters/discord/commands/: __init__.py  matcher.py  params.py  storage.py
scripts/: generate_client_pyi.py
tests/: conftest.py  test_api_nullability.py  test_attachment_segment_url.py  test_bot_attachment_materialize.py  test_event_description_logging.py  test_event_forward_ref_rebuild.py  test_guild_create_compat_event.py  test_interaction_user_id.py  test_invite_target_users_upload.py  test_message_segment_validator.py  test_message_snapshot_missing_mention_roles.py  test_models_facade_and_layers.py  test_modify_dm_icon_encoding.py  test_outbound_transport_serialization.py  test_reaction_url_encoding.py  test_removed_guild_endpoints_warning.py  test_validation_rules.py
tests/fake/: doubles.py
