[tool.poetry]
name = "nonebot-adapter-discord"
version = "0.1.2"
description = "Discord adapter for nonebot2"
authors = ["CMHopeSunshine <277073121@qq.com>", "yanyongyu <yyy@nonebot.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nonebot/adapter-discord"
repository = "https://github.com/nonebot/adapter-discord"
documentation = "https://github.com/nonebot/adapter-discord"
keywords = ["nonebot", "discord", "bot"]

packages = [{ include = "nonebot" }]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
nonemoji = "^0.1.2"
pre-commit = "^3.1.0"

[tool.ruff]
select = ["E", "W", "F", "I", "UP", "C", "T", "PYI", "PT"]
ignore = ["E402", "F403", "F405", "C901", "PYI021", "PYI048", "W191", "E501"]
line-length = 88
target-version = "py38"
ignore-init-module-imports = true


[tool.ruff.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]
combine-as-imports = true
order-by-type = true
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "first-party",
    "third-party",
    "local-folder",
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
