#:schema https://json.schemastore.org/pyproject.json

[project]
name = "nonebot-adapter-discord"
version = "0.1.8"
description = "Discord adapter for nonebot2"
authors = [
    { name = "CMHopeSunshine", email = "277073121@qq.com" },
    { name = "yanyongyu", email = "yyy@nonebot.dev" },
]
license = "MIT"
readme = "README.md"
keywords = ["nonebot", "discord", "bot"]
requires-python = ">=3.9,<4.0.0"
dependencies = ["nonebot2>=2.4.4"]

[dependency-groups]
dev = [
    "ruff>=0.14.0,<0.15.0",
    "nonemoji>=0.1.2,<0.2.0",
    "pre-commit>=4.0.0,<5.0.0",
]

[project.urls]
homepage = "https://github.com/nonebot/adapter-discord"
repository = "https://github.com/nonebot/adapter-discord"
documentation = "https://github.com/nonebot/adapter-discord"

[tool.uv.build-backend]
module-name = "nonebot.adapters.discord"
module-root = ""

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "C", "T", "PYI", "PT"]
ignore = ["E402", "F403", "F405", "C901", "PYI021", "PYI048", "W191", "E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]
combine-as-imports = true
order-by-type = true
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "first-party",
    "third-party",
    "local-folder",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
