#:schema https://json.schemastore.org/pyproject.json

[project]
name = "nonebot-adapter-discord"
version = "0.1.8"
description = "Discord adapter for nonebot2"
authors = [
    { name = "CMHopeSunshine", email = "277073121@qq.com" },
    { name = "yanyongyu", email = "yyy@nonebot.dev" },
]
license = "MIT"
readme = "README.md"
keywords = ["nonebot", "discord", "bot"]
requires-python = ">=3.9,<4.0.0"
dependencies = ["nonebot2>=2.4.4"]

[dependency-groups]
dev = [
    { include-group = "test" },
    "ruff>=0.14.0,<0.15.0",
    "nonemoji>=0.1.2,<0.2.0",
    "pre-commit>=4.0.0,<5.0.0",
]
test = [
    "nonebug>=0.4.0,<0.5.0",
    "pytest>=7.0.0,<10.0.0",
    "pytest-asyncio>=1.1.0,<2.0.0",
    "pytest-cov>=7.0.0",
]

[project.urls]
homepage = "https://github.com/nonebot/adapter-discord"
repository = "https://github.com/nonebot/adapter-discord"
documentation = "https://github.com/nonebot/adapter-discord"

[tool.uv.build-backend]
module-name = "nonebot.adapters.discord"
module-root = ""

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "ERA",   # eradicate
    "YTT",   # flake8-2020
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TID",   # flake8-tidy-imports
    "TC",    # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "FLY",   # flynt
    "I",     # isort
    "C90",   # mccabe
    "N",     # PEP8-naming
    "PERF",  # Perflint
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "UP",    # pyupgrade
    "FURB",  # refurb
    "RUF",   # Ruff-specific rules
    "TRY",   # tryceratops
]
ignore = [
    "E501",   # 过长的行由 ruff format 处理, 剩余的都是字符串
    "COM812", # 强制尾随逗号
    "TID252", # 相对导入
    "PYI021", # docstring-in-stub
    "W191",   # tab-indentation 由 ruff format 处理
]

flake8-quotes = { inline-quotes = "double", multiline-quotes = "double" }

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "S101",    # assert
    "PLR2004", # magic-value-comparison
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]
combine-as-imports = true
order-by-type = true
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "first-party",
    "third-party",
    "local-folder",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
